--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Terraform Init
       run: |
         cd ./Terraform/Pipeline-GH
-        terraform init -backend-config="sas_token=${{ secrets.BACKENDSTORAGESASTOKEN }}"
+        terraform init -backend-config="sas_token=${{ secrets.TOKENSASBACKEND }}"
        
 
     # Checks that all Terraform configuration files adhere to a canonical format
